<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_icon_profile"
        android:title="@string/profile"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menu_notification"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/notifications"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/menu_cart"
        android:title="@string/cart"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_info"
        android:title="@string/info"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_login"
        android:title="@string/login"
        app:showAsAction="never"
        />

</menu>