<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.fragment.DF_Choices"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="50sp"
            android:backgroundTint="#272626"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <RadioGroup
                    android:id="@+id/choices_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20sp">

                    <RadioButton
                        android:id="@+id/choices_rb_online"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/online_courses" />

                    <RadioButton
                        android:id="@+id/choices_rb_offline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/offline_courses" />

                    <RadioButton
                        android:id="@+id/choices_rb_all"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/all_online_offline" />

                    <RadioButton
                        android:id="@+id/choices_rb_helpful"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/helpful_channels_youtube" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal">

                    <Button
                        android:id="@+id/choices_btn_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#85232F"
                        android:layout_gravity="center"
                        android:padding="0sp"
                        android:layout_margin="10sp"
                        android:text="@string/cancel" />

                    <Button
                        android:id="@+id/choices_btn_go"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#0A2EF8"
                        android:layout_gravity="center"
                        android:padding="0sp"
                        android:layout_margin="10sp"
                        android:text="@string/go"
                        />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</layout>