<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1E1059"
        android:orientation="vertical"
        tools:context=".ui.activity.SignIn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:textStyle="bold|italic"
            android:layout_margin="25sp"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="50sp"
            android:autoSizeMinTextSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/si_til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/si_et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/change_colour"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:maxLength="30"
                android:textSize="20sp"
                android:text="fareshassan@gmail.com"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/si_tiL_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/si_et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/change_colour"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:maxLength="30"
                android:textSize="20sp"
                android:text="Fares@010@Fares"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20pt"
            android:orientation="horizontal"
            android:layout_margin="10sp"
            android:weightSum="9">

            <CheckBox
                android:id="@+id/si_cb_remember"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:padding="7dp"
                android:text="@string/remember_me"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/si_btn_forgetpass"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/forget_password"
                android:textSize="12sp"
                android:textColor="#E91E2F"
                app:backgroundTint="#221E33" />
        </LinearLayout>

        <Button
            android:id="@+id/si_btn_login"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_margin="30sp"
            android:text="@string/login"
            android:enabled="false"
            app:backgroundTint="#E91E2F" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="10sp"
            android:paddingBottom="200sp"
            android:weightSum="9">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="5"
                android:text="@string/donot_have_account"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/si_btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:text="@string/sign_up"
                android:textColor="#E91E2F"
                android:textSize="12sp"
                app:backgroundTint="#28272E" />
        </LinearLayout>


    </LinearLayout>
</layout>