<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#28272E"
        android:orientation="vertical"
        tools:context=".ui.activity.SignUp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:textStyle="bold|italic"
            android:layout_margin="25sp"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="50sp"
            android:autoSizeMinTextSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/su_tiL_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:hint="@string/username"
            android:textColorHint="@color/white"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:counterTextColor="@color/white"
            app:startIconDrawable="@drawable/person"
            app:startIconTint="@color/white"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/su_et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/change_colour"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:maxLength="30"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/su_tiL_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:counterTextColor="@color/white"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/white"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/su_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/change_colour"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:maxLength="30"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/su_tiL_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:counterTextColor="@color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/white"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/su_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/change_colour"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:maxLength="30"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/su_tiL_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/white"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:counterTextColor="@color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/white"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/su_et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/change_colour"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:maxLength="30"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/su_cb_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/agree_terms"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/su_btn_register"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5sp"
            android:text="@string/register"
            android:textSize="18sp"
            app:backgroundTint="#E91E2F"
            android:enabled="false"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5sp"
            android:gravity="top"
            android:padding="20sp"
            android:weightSum="9">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/already_have_account"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/su_btn_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/sign_in"
                android:textColor="#E91E2F"
                android:textSize="12sp"
                app:backgroundTint="#28272E" />
        </LinearLayout>

    </LinearLayout>
</layout>