<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.Video_Comment">

        <FrameLayout
            android:id="@+id/framel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <VideoView
                android:id="@+id/vw_video"
                android:layout_width="match_parent"
                android:layout_height="300sp"
                />
        </FrameLayout>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_marginTop="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/framel">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10sp">

                <TextView
                    android:id="@+id/vc_tv_understand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeMaxTextSize="20sp"
                    android:autoSizeMinTextSize="18sp"
                    android:autoSizeTextType="uniform"
                    android:text="@string/understand_percentage"
                    android:textColor="#031993"
                    android:textSize="18sp" />

                <RatingBar
                    android:id="@+id/vc_stars_understand"
                    style="@style/Base.Widget.AppCompat.RatingBar.Indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="false"
                    android:progressTint="#FFBF00"
                    android:rating="0"
                    android:scaleX="1"
                    android:scaleY="1"
                    android:stepSize="0.1" />

                <TextView
                    android:id="@+id/vc_tv_missing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeMaxTextSize="20sp"
                    android:autoSizeMinTextSize="18sp"
                    android:autoSizeTextType="uniform"
                    android:text="@string/missing_to_understand"
                    android:textColor="#031993"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vc_et_missing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/missing_understand_hint"
                    android:textColor="#032AFF"
                    android:textSize="20sp"
                    android:visibility="gone" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="3sp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/vc_tv_if"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeMaxTextSize="20sp"
                    android:autoSizeMinTextSize="18sp"
                    android:autoSizeTextType="uniform"
                    android:text="@string/missing_for_new_video"
                    android:textColor="#031993"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5sp">

                    <ToggleButton
                        android:id="@+id/vc_btn_yes"
                        android:layout_width="70sp"
                        android:layout_height="30sp"
                        android:layout_marginStart="10sp"
                        android:layout_marginEnd="10sp"
                        android:background="#1A000000"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textOff="@string/yes"
                        android:textOn="@string/yes_then"
                        android:textSize="18sp" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vc_et_new_video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/missing_questions_hint"
                    android:textColor="#032AFF"
                    android:textSize="20sp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/vc_btn_save"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="#E8D7D5"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textColor="#FF0057"
                    android:textSize="20sp" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>