<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.PriceDetails">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#147ED3"
                app:title="@string/price_details"
                app:titleTextColor="#FFF">

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:padding="5sp"
            android:background="#F8F6E6"
            >

            <TextView
                android:id="@+id/pd_tv_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/purchasing_info1"
                android:textSize="20sp"
                android:padding="10sp"
                android:textColor="#000000"
                android:textStyle="bold" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/pd_rv_packages"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/view_package"
                        />
                    <Button
                        android:id="@+id/pd_btn_add_to_cart"
                        android:layout_width="300sp"
                        android:layout_height="70sp"
                        android:layout_margin="20sp"
                        android:textSize="25sp"
                        android:layout_gravity="center"
                        android:text="@string/add_to_cart"
                        android:visibility="visible"
                        />
                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>